[build] KTC-5720 Enable native access in the compiler